test/invalidImports/c.ts
import {aaa} from './a';
import {bbb} from './b';

export const c1 = 1;
export const c2 = 2;
export const c3 = 3;
